Updated the default to say please select a priority.

--- a/ToDo.FrontEnd/Components/Pages/TaskForm.razor
+++ b/ToDo.FrontEnd/Components/Pages/TaskForm.razor
@@ -26,7 +26,7 @@
           @bind-Value="task.Priority.Value" 
           class="form-select bg-dark text-white"
         >
-          <option value="">Select an Option</option>
+          <option value="">Select a Priority</option>
           <option class="bg-danger" value="High">High</option>
           <option class="bg-warning" value="Medium">Medium</option>
           <option class="bg-success" value="Low">Low</option>
