--- a/ToDo.FrontEnd/Components/Pages/TaskForm.razor
+++ b/ToDo.FrontEnd/Components/Pages/TaskForm.razor
@@ -6,7 +6,7 @@
 
 <PageTitle>@pageTitle</PageTitle>
 
-<div class="row px-4 justify-content-center">
+<div class="d-flex justify-content-center">
   <div class="col-md-7 center">
     <h3>@pageTitle</h3> 
     <EditForm Model="@task" FormName="editTask" OnValidSubmit="HandleSubmit">
