--- a/ToDo.FrontEnd/Components/Pages/TaskForm.razor
+++ b/ToDo.FrontEnd/Components/Pages/TaskForm.razor
@@ -6,8 +6,8 @@
 
 <PageTitle>@pageTitle</PageTitle>
 
-<div class="d-flex justify-content-center">
-  <div class="col-md-7 center">
+<div class="d-flex justify-content-center align-self-center">
+  <div class="col-md-3 center w-75">
     <h3>@pageTitle</h3> 
     <EditForm Model="@task" FormName="editTask" OnValidSubmit="HandleSubmit">
       <DataAnnotationsValidator />
