--- a/ToDo.FrontEnd/Components/Pages/Home.razor
+++ b/ToDo.FrontEnd/Components/Pages/Home.razor
@@ -5,7 +5,6 @@
 <div class="d-flex justify-content-center">
   <div class="col-md-10 p-3">
   <PageTitle>Todo List</PageTitle>
-  <button @onclick="sortTasks" class="btn bg-primary text-white mb-1">@(reverseByPriority ? "Low to High Priority" : "High to Low Priority")</button>
   <table class="table table-bordered table-dark ">
     <thead class="thead-dark">
       <tr>
@@ -34,22 +33,16 @@
 </div>
 
 @code {
-    private List<Models.Task>? tasks;
+    private Models.Task[] tasks;
     
-    private bool reverseByPriority = false;
-    private void sortTasks() {
-      reverseByPriority = !reverseByPriority;
-      tasks = Client.GetTasksByPriority(reverseByPriority);
-    }
-
-    protected override void OnInitialized()
+    protected override async System.Threading.Tasks.Task OnInitializedAsync()
     {
         base.OnInitialized();
-        tasks = Client.GetTasksByPriority();
+        tasks = await Client.GetTasksAsync();
     }
 
     private async System.Threading.Tasks.Task HandleDeleteTask(int taskId) {
       await Client.DeleteTask(taskId);
-      tasks = Client.GetTasksByPriority(reverseByPriority);
+      tasks = await Client.GetTasksAsync();
     }
 }
